# rticonnextdds-connector-rust

./: CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.config/: nextest.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  improvement.yml  question.yml
.github/workflows/: docs.yml
docs/: connector.md  input.md  lib.md  output.md  result.md
docs/guide/: advanced.md  configuration.md  connector.md  data.md  errors.md  getting_started.md  index.md  input.md  output.md  threading.md
examples/shapes/: README.md  help_main.txt  help_pub.txt  help_sub.txt  main.rs  publisher.rs
resources/jenkins/: build_and_test.groovy
snippets/: README.md  quickstart.rs
snippets/output/: using_instance.rs
src/: connector.rs  input.rs  lib.rs  output.rs
src/ffi/: mod.rs  rtiddsconnector.rs
src/guide/: mod.rs
tests/test_utils/: context.rs
